--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ nav ul li a:hover {
 }
 
 .video-section {
-    background-color: #132a13;
+    background-color: #31572c;
 }
 .video-container {
     max-width: 800px;
