--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ nav ul li a:hover {
     align-items: center;
     justify-content: center;
     padding: 50px;
-    background: #4f772d;
+    background: #589d1c;
 }
 .hero-content {
     max-width: 50%;
